--- a/AMVisualizer/Views/Home/Graph.cshtml
+++ b/AMVisualizer/Views/Home/Graph.cshtml
@@ -171,7 +171,7 @@
             document.getElementById('eventSpan').innerHTML = '<h2>zoom event:</h2>' + JSON.stringify(params, null, 4);
         });
         network.on("showPopup", function (params) {
-            //alert(params);
+            alert(params);
             //var myCell = document.getElementById('thiselem');//указываем элемент в который вставляем данные
             //myCell.innerHTML = params.nodes[0];
 
